--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>prouzr</title>
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js" type="module" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>prouzr</title>
-  <link rel="stylesheet" href="main.css">
-  <script src="main.js" type="module" defer></script>
-</head>
-
-<body>
-  <div id="tcont">
-    <div id="tabs"></div>
-    <button id="add">+</button>
-  </div>
-  <div id="controls">
-    <button id="back">&#8592;</button>
-    <button id="forward">&#8594;</button>
-    <button id="reload">&#8635;</button>
-    <button id="download">&#8595;</button>
-    <button id="adblock">&#128721;</button>
-    <input type="text" id="url" placeholder="enter an url">
-    <input type="text" id="search" placeholder="search google">
-  </div>
-  <div id="viewcont"></div>
-</body>
-
+  <body>
+    <div id="tcont">
+      <div id="tabs"></div>
+      <button id="add">+</button>
+    </div>
+    <div id="controls">
+      <button id="back">&#8592;</button>
+      <button id="forward">&#8594;</button>
+      <button id="reload">&#8635;</button>
+      <button id="download">&#8595;</button>
+      <button id="adblock">&#128721;</button>
+      <input type="text" id="url" placeholder="enter an url" />
+      <input type="text" id="search" placeholder="search google" />
+    </div>
+    <div id="viewcont"></div>
+  </body>
 </html>
